<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/review_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_gravity="center_horizontal|center_vertical">

    <TextView
        android:id="@+id/customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/cust_name"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/black" />
    <LinearLayout
        android:id="@+id/star_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/star_icon"
            android:contentDescription="@string/rate_star"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/star_icon"
            android:contentDescription="@string/rate_star"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/star_icon"
            android:contentDescription="@string/rate_star"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/star_icon"
            android:contentDescription="@string/rate_star"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/star_icon"
            android:contentDescription="@string/rate_star"/>

    </LinearLayout>

    <TextView
        android:id="@+id/customer_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/random_review_text"
        android:textColor="@android:color/black"
        />
</LinearLayout>
</androidx.cardview.widget.CardView>